<!--
  ~ Copyright 2017 Bas van den Boom 'Z3r0byte'
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<resources>
    <string name="app_name">Magister Tokens</string>
    <string name="title_activity_manage_lists">ManageListsActivity</string>
    <string name="msg_no_lists_found">Geen lijsten gevonden</string>
    <string name="msg_import_list">Lijst importeren</string>
    <string name="msg_import_list_clarification">Je kunt een lijst met codes importeren via een .csv bestand. Gebruik als veldscheidingsteken een \';\', \':\' of \',\'. Op dit moment worden er nog geen andere bestandstypes ondersteund.</string>
    <string name="btn_import_list">Bestand importeren</string>
    <string name="msg_cancel">Annuleren</string>
    <string name="err_oops">Oeps…</string>
    <string name="msg_okay">Oké</string>
    <string name="err_retrieving_file">Er ging iets mis tijdens het ophalen van het bestand. Plaats het document in de hoofdmap van de sd-kaart en probeer het opnieuw.</string>
    <string name="err_unable_to_read_lines">Onderstaande regels konden niet worden gelezen, controleer of u het juiste formaat gebruikt.\n</string>
    <string name="msg_success">Gelukt!</string>
    <string name="msg_successfully_read_file">Het bestand is succesvol ingeladen.</string>
    <string name="msg_insert_name">Voer een naam in.</string>
    <string name="msg_insert_name_for_list">Voer een naam voor deze lijst in:</string>
    <string name="err_list_exsists">Er bestaat al een lijst met deze naam.</string>
    <string name="err_something_went_wrong">Er ging iets mis: \n</string>
    <string name="msg_successfully_imported_list">Lijst succesvol geïmporteerd. Aanbevolen wordt het bestand nu te verwijderen van uw telefoon, zodat andere mensen hier niet bij kunnen.</string>
    <string name="msg_allow_read_storage_please">Geef aub toestemming om de opslag te lezen.</string>
    <string name="title_activity_token">TokenActivity</string>
    <string name="action_settings">Settings</string>
    <string name="msg_amount_of_tokens">" tokens"</string>
    <string name="msg_code_number">codenummer</string>
    <string name="msg_no_results">Geen resultaten</string>
    <string name="msg_app_title">Magister Tokens</string>
    <string name="msg_trial_left">Trial: %1$d dagen resterend</string>
    <string name="msg_premium">Premium</string>
    <string name="msg_manage_lists">Lijsten beheren</string>
    <string name="msg_token_amount_formattable">%1$d tokens</string>
    <string name="msg_delete_list_title">Lijst verwijderen?</string>
    <string name="msg_yes">Ja</string>
    <string name="msg_list_deleted">Lijst verwijderd</string>
    <string name="msg_delete_list_body">Weet je zeker dat je de lijst %1$s wilt verwijderen?</string>
    <string name="menu_help">Help</string>
    <string name="msg_help_title">Help Magister Tokens</string>
    <string name="msg_help_body"><![CDATA[In dit scherm kun je je codelijsten bekijken, hieronder staan de dingen die je kunt doen:<br/><br/><b>Plus-knop (rechtsboven):</b> met deze knop kun je lijsten toevoegen.<br/><br/><b>Kort op een lijst klikken:</b> als je dit doet, wordt de lijst als favoriet ingesteld, dit wil zeggen dat de app met die lijst opstart.<br/><br/><b>Lang drukken op een lijst:</b> door lang te klikken kun je de lijst verwijderen, geen zorgen, er wordt eerst gevraagd of je het zeker weet voordat er iets wordt verijderd.<br/><br/>Nog vragen? Stuur even een mailtje naar z3r0byte.apps@gmail.com]]></string>
    <string name="title_activity_settings">Instellingen</string>
    <string name="msg_settings">Instellingen</string>

    <string name="msg_license">Licentie</string>
    <string name="msg_security">Beveiliging</string>
    <string name="msg_about">Over</string>
    <string name="status">Status:</string>
    <string name="trial_days_left">Trial: %1$d dagen over</string>
    <string name="err_license_invalid">Trial is verlopen!</string>


    <string name="aboutLibraries_description_showIcon">true</string>
    <string name="aboutLibraries_description_showVersion">true</string>
    <string name="aboutLibraries_description_text">Een makkelijke, snelle en veilige manier om je toegangscodes van Magister op te slaan.</string>


    <string name="vingerafdruk_vereisen">Vingerafdruk vereisen</string>
    <string name="msg_require_password">Wachtwoord vereisen</string>
    <string name="msg_security_information">Informatie over veiligheidsmaatregelingen</string>
    <string name="msg_change_password">Wachtwoord veranderen</string>
    <string name="err_set_pwd_first">Stel eerst een wachtwoord in</string>
    <string name="err_register_fingerprints_first">Registreer eerst vingerafdrukken</string>
    <string name="msg_fix">Fix</string>
    <string name="msg_touch_fingerprintsensor">Raak de vingerafdruksensor aan om door te gaan</string>
    <string name="msg_fingerprint_recognised">Vingerafdruk herkend</string>
    <string name="err_fingerprint_not_recognised">Vingerafdruk niet herkend</string>
    <string name="err_error_format">Fout: %1$s</string>
    <string name="msg_enter_password">Voer uw wachtwoord in</string>
    <string name="msg_enter_password_to_continue">Voer uw wachtwoord in om door te gaan</string>
    <string name="hint_password">Wachtwoord</string>
    <string name="err_passwords_do_not_match">Wachtwoorden komen niet overeen</string>
    <string name="msg_password_set">Wachtwoord ingesteld</string>
    <string name="msg_enter_a_password">Voer een wachtwoord in</string>
    <string name="msg_remember_your_password">Onthoud dit goed! Zonder wachtwoord hebt u geen toegang tot uw codes!</string>
    <string name="msg_reenter_your_password">Voer uw wachtwoord nogmaals in</string>
    <string name="msg_enter_password_again_to_confirm">Voer uw wachtwoord nogmaals in om het te bevestigen.</string>
    <string name="err_password_incorrect">Wachtwoord onjuist</string>
    <string name="msg_security_info_head">Veiligheidsinformatie</string>
    <string name="msg_security_info_body"><![CDATA[Magister Tokens heeft een aantal veiligheidsfuncties, hieronder kunt u daar meer over lezen: <br/><br/><b>Geen backups toegestaan</b><br/>Magister Tokens verbiedt door middel van zijn manifest dat er backups gemaakt kunnen worden van de app-data. Hierdoor voorkomt de app dat de codes met een pc uit de telefoon gehaald kunnen worden.<br/><br/><b>Inlogverificatie</b><br/>In deze app kunt u er voor kiezen om de app te beveiligen met een wachtwoord en/of vingerafdruk. Meer informatie over beide methodes vindt u hieronder.<br/><br/><b>Wachtwoord wordt versleuteld</b><br/>Magister Tokens slaat uw wachtwoord niet als tekst op. Voordat het wachtwoord wordt opgeslagen wordt er namelijk een zogenoemde hash van gemaakt met het sterke SHA-256 algoritme. Hierdoor voorkomt de app dat zelfs als kwaadwilligen het voor elkaar krijgen uw wachtwoord uit de app-data te halen, ze niet weten wat uw wachtwoord is.<br/><br/><b>Vingerafdruk</b><br/>Magister Tokens gebruikt voor vingerafdruk verificatie de ingebouwde Android-functies. Hierdoor kan de app de vingerafdruk zelf niet lezen en hoeft hij deze dus ook niet op te slaan, dit voorkomt het risico dat uw vingerafdruk gestolen wordt uit de app.<br/><br/><b>Let op:</b><br/>Indien u uw toestel geroot heeft is de veiligheid van uw codes niet te garanderen!<br/><br/>Voor verdere vragen kunt u een mail sturen naar z3r0byte.apps@gmail.com]]></string>

    <string name="sign_in">Inloggen</string>

    <string name="fingerprint_description">Bevestig vingerafdruk om door te gaan</string>
    <string name="fingerprint_hint">Raak sensor aan</string>
    <string name="fingerprint_not_recognized">Vingerafdruk niet herkend</string>
    <string name="fingerprint_success">Vingerafdruk herkend</string>
    <string name="use_password">Gebruik wachtwoord</string>
    <string name="password_description">Voer uw wachtwoord in</string>
    <string name="password_not_recognised">Incorrect wachtwoord</string>
    <string name="msg_importing_list">Lijst importeren...</string>
    <string name="msg_please_wait">Een ogenblik geduld</string>
    <string name="msg_info_licenses">Informatie over licenties</string>
    <string name="msg_buy_license">Koop een licentie</string>
    <string name="msg_refresh_license">Ververs licentie</string>
    <string name="lijst_toevoegen">Lijst toevoegen</string>
    <string name="msg_loading_purchases">Aankopen laden</string>
    <string name="err_unknown">Onbekende fout</string>
    <string name="err_no_connection">Geen verbinding</string>
    <string name="title_license_info">Informatie over licenties</string>
    <string name="body_license_info"><![CDATA[<b>Proefperiode</b><br/>De eerste keer dat u de app opstart wordt een proefperiode van 14 dagen gestart. Deze proefperiode is gekoppeld aan uw toestel.<br/><br/><b>Premium versie</b><br/>U kunt er voor kiezen om de volledige versie te kopen, zodat u na de proefperiode de app ook nog kunt gebruiken. De aankoop wordt gekoppeld aan uw google-account, dus als u de app verwijdert en opnieuw installeert, hebt u nog steeds beschikking tot alle functies.]]></string>
</resources>
