<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_license"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="eu.z3r0byteapps.magistertokens.LicenseActivity">

    <android.support.design.widget.AppBarLayout
        android:elevation="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:text="@string/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="55dp"
            android:id="@+id/textView"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <TextView
            android:layout_marginTop="16dp"
            android:text="@string/trial_days_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/status"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true" />

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/daysLeftProgressBar"
            android:layout_marginTop="23dp"
            android:layout_below="@+id/status"
            android:layout_centerHorizontal="true"
            android:max="14"
            android:progress="12" />

        <TextView
            android:text="@string/msg_info_licenses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:padding="16dp"
            android:id="@+id/info_licenses" />

        <TextView
            android:padding="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_buy_license"
            android:textAllCaps="true"
            android:textColor="@color/primary"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/buy_license" />

        <TextView
            android:padding="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_refresh_license"
            android:textAllCaps="true"
            android:textColor="@color/primary"
            android:layout_below="@id/buy_license"
            android:layout_centerHorizontal="true"
            android:id="@+id/refresh_license" />

    </RelativeLayout>

</RelativeLayout>
